@@ -46,6 +46,5 @@ VSFilter:
 1) Use the defines from version.h for MPC_COPYRIGHT_STR in VSFilter
 2) Define VSFilter's version numbers in a place accessible by its installer and VSFilter itself
 3) Do we need the ISOLATION_AWARE_ENABLED define?
-4) Fix the YUV2 bug causing subtitles not to show
-5) Backport a few useful patches from those VSFilter forks;  we need individual patches for that
+4) Backport a few useful patches from those VSFilter forks;  we need individual patches for that
    and we have to make sure that everything works right for mpc-hc itself
