@@ -266,12 +266,13 @@ STDMETHODIMP CMemSubPic::Unlock(RECT* pDirtyRect)
 void AlphaBlt_YUY2_SSE2(int w, int h, BYTE* d, int dstpitch, BYTE* s, int srcpitch)
 {
     unsigned int ia;
-    DWORD* d2 = (DWORD*)d;
-    BYTE* s2 = s;
-    BYTE* s2end = s2 + w * 4;
     static const __int64 _8181 = 0x0080001000800010i64;
 
     for (ptrdiff_t j = 0; j < h; j++, s += srcpitch, d += dstpitch) {
+        DWORD* d2 = (DWORD*)d;
+        BYTE* s2 = s;
+        BYTE* s2end = s2 + w * 4;
+
         for (; s2 < s2end; s2 += 8, d2++) {
             ia = (s2[3] + s2[7]) >> 1;
             if (ia < 0xff) {
@@ -304,12 +305,13 @@ void AlphaBlt_YUY2_SSE2(int w, int h, BYTE* d, int dstpitch, BYTE* s, int srcpit
 void AlphaBlt_YUY2_MMX(int w, int h, BYTE* d, int dstpitch, BYTE* s, int srcpitch)
 {
     unsigned int ia;
-    DWORD* d2 = (DWORD*)d;
-    BYTE* s2 = s;
-    BYTE* s2end = s2 + w * 4;
     static const __int64 _8181 = 0x0080001000800010i64;
 
     for (ptrdiff_t j = 0; j < h; j++, s += srcpitch, d += dstpitch) {
+        DWORD* d2 = (DWORD*)d;
+        BYTE* s2 = s;
+        BYTE* s2end = s2 + w * 4;
+
         for (; s2 < s2end; s2 += 8, d2++) {
             ia = (s2[3] + s2[7]) >> 1;
             if (ia < 0xff) {
@@ -344,11 +346,12 @@ void AlphaBlt_YUY2_MMX(int w, int h, BYTE* d, int dstpitch, BYTE* s, int srcpitc
 void AlphaBlt_YUY2_C(int w, int h, BYTE* d, int dstpitch, BYTE* s, int srcpitch)
 {
     unsigned int ia;
-    DWORD* d2 = (DWORD*)d;
-    BYTE* s2 = s;
-    BYTE* s2end = s2 + w * 4;
 
     for (ptrdiff_t j = 0; j < h; j++, s += srcpitch, d += dstpitch) {
+        DWORD* d2 = (DWORD*)d;
+        BYTE* s2 = s;
+        BYTE* s2end = s2 + w * 4;
+
         for (; s2 < s2end; s2 += 8, d2++) {
             ia = (s2[3] + s2[7]) >> 1;
             if (ia < 0xff) {
